Fix: Corrige detecção de ambiente local para conexão multiplayer
- Atualiza função connectColyseus para detectar corretamente ambientes locais
- Suporte para localhost, 127.0.0.1, IPs de rede local e protocolo file://
- Resolve problema onde apenas 'localhost' exato conectava ao servidor local
- Adiciona logging melhorado mostrando o host de conexão

--- a/index.html
+++ b/index.html
@@ -1477,9 +1477,20 @@
             isConnectingColyseus = true;
 
             const protocol = window.location.protocol === "https:" ? "wss" : "ws";
-            const host = window.location.hostname === "localhost" ? "localhost:2567" : COLYSEUS_PROD_URL;
 
-            logSystem(`Connecting to Colyseus [${roomName}]...`, "info");
+            // Detectar se estamos em ambiente local
+            const hostname = window.location.hostname;
+            const isLocal =
+                hostname === "localhost" ||
+                hostname === "127.0.0.1" ||
+                hostname.startsWith("192.168.") ||
+                hostname.startsWith("10.") ||
+                hostname.startsWith("172.16.") ||
+                window.location.protocol === "file:";
+
+            const host = isLocal ? "localhost:2567" : COLYSEUS_PROD_URL;
+
+            logSystem(`Connecting to Colyseus [${roomName}] at ${host}...`, "info");
             colyseusClient = new Colyseus.Client(`${protocol}://${host}`);
 
             try {
